// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outputPath transforms correctly using "outputPath-0" data 1`] = `
"module.exports = {
	output: {
		path: path.join(__dirname, 'dist')
	}
}
"
`;

exports[`outputPath transforms correctly using "outputPath-1" data 1`] = `
"const path = require('path');
module.exports = {
	output: {
		path: path.join(__dirname, 'dist')
	}
}
"
`;

exports[`outputPath transforms correctly using "outputPath-2" data 1`] = `
"const p = require('path');
module.exports = {
	output: {
		path: p.join(__dirname, 'dist')
	}
}
"
`;
